--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.77.8"
+    "react-icons": "^5.2.1",
+    "sass": "^1.77.8",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/node": "^20",
