--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.2.5",
     "react": "^18",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "sass": "^1.77.8",
