--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "sass": "^1.77.8",
+    "serialport": "^12.0.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "zustand": "^4.5.4"
